[package]
name = "imgui-dk"
version = "0.4.0"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors", "Tamás Szelei <szelei.t@gmail.com>"]
description = "High-level Rust bindings to dear imgui - docking branch"
homepage = "https://github.com/sztomi/imgui-rs-dk"
repository = "https://github.com/sztomi/imgui-rs-dk"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.markdown"

exclude = [
    "/resources"
]

[dependencies]
bitflags = "1.0"
glium = { version = "0.27", default-features = false, optional = true }
gfx = { version = "0.18", optional = true }
imgui-sys = { version = "0.4.0", path = "imgui-sys" }
lazy_static = "1.1"
parking_lot = "0.11"

[features]
wasm = ["imgui-sys/wasm"]

[dev-dependencies]
memoffset = "0.5"

[workspace]
members = [
    "imgui-sys",
    "imgui-gfx-renderer",
    "imgui-glium-renderer",
    "imgui-winit-support"
]
exclude = [
    "imgui-examples",
    "imgui-gfx-examples",
    "imgui-sys-bindgen"
]
